--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 h1 {
  text-align:center;
- color:BurlyWood
+ color:BurlyWood;
 }
 p {
- text-align:center
- color:BurlyWood
-{
+ text-align:center;
+ color:BurlyWood;
+}
