--- a/style.css
+++ b/style.css
@@ -7,8 +7,8 @@ p {
  color:BurlyWood;
 }
 img {
-height:100px
-width:100px
+height:190px;
+width:200px;
 }
 <a href="" class="gradient-button">Button</a>
 HTML
