--- a/style.css
+++ b/style.css
@@ -37,3 +37,10 @@ body {
  display: flex;
  justify-content: center; 
 }
+/* Стили таблицы (IKSWEB) */
+table.iksweb{text-decoration: none;border-collapse:collapse;width:100%;text-align:center;}
+table.iksweb th{font-weight:normal;font-size:14px; color:#ffffff;background-color:#000000;}
+table.iksweb td{font-size:13px;color:#000000;}
+table.iksweb td,table.iksweb th{white-space:pre-wrap;padding:10px 5px;line-height:13px;vertical-align: middle;border: 1px solid #000000;}
+table.iksweb tr:hover{background-color:#f9fafb}
+table.iksweb tr:hover td{color:#000000;cursor:default;}
